--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --primary-white-color: #F4F4FD;
     --primary-black-color: #2e2f42;
     --primary-text-color: #434455;
+    --border-accent: #E7E9FC;
 }
 
 body { 
@@ -15,6 +16,17 @@ body {
     background-color: var(--background-color);
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
 .link {
     text-decoration: none;
 }
@@ -23,7 +35,46 @@ body {
     list-style-type: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.container {
+    width: 100%;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
 /* ----------------header---------------- */
+
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid var(--border-accent);
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    justify-content: space-between;
+}
 
 .header-logo {
     font-family: "Raleway", sans-serif;
@@ -33,10 +84,18 @@ body {
     letter-spacing: 0.03em;
     color: var(--primary-logo-color);
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
 }
 
 .header-logo-span {
     color: var(--primary-black-color);
+}
+
+.header-menu {
+    display: flex;
+    margin-right: 332px;
+    gap: 40px;
 }
 
 .header-menu-link {
@@ -54,6 +113,9 @@ body {
 
 .header-address {
     font-style: normal;
+    display: flex;
+    margin-left: auto;
+    gap: 40px;
 }
 
 .header-address-link {
@@ -74,6 +136,10 @@ body {
     background-color: var(--primary-black-color);
 }
 
+.hero-container {
+    padding-bottom: 188px;
+}
+
 .hero-title {
     font-weight: 700;
     font-size: 56px;
@@ -81,6 +147,11 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--background-color);
+    max-width: 496px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 188px;
+    margin-bottom: 48px;
 }
 
 .hero-button {
@@ -92,6 +163,11 @@ body {
     cursor: pointer;
     color: var(--background-color);
     background-color: var(--primary-logo-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 16px 32px;
+    display: block;
+    margin: 0 auto;
 }
 
 .hero-button:hover,
@@ -101,12 +177,27 @@ body {
 
 /* ----------------benefits---------------- */
 
+.benefits-container {
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.benefits-list {
+    display: flex;
+    gap: 24px;
+}
+
+.benefits-item {
+    width: calc((100% - 72px) / 4);
+}
+
 .benefits-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-black-color);
+    padding-bottom: 8px;
 }
 
 .benefits-text {
@@ -118,6 +209,10 @@ body {
 
 /* ----------------doing---------------- */
 
+.doing-container {
+    margin-bottom: 120px;
+}
+
 .doing-title {
     font-weight: 700;
     font-size: 36px;
@@ -126,6 +221,16 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--primary-black-color);
+    margin-bottom: 72px;
+}
+
+.doing-list {
+    display: flex;
+    gap: 24px;
+}
+
+.doing-item {
+    width: calc((100% - 48px) / 3);
 }
 
 /* ----------------team---------------- */
@@ -142,10 +247,28 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--primary-black-color);
+    padding-top: 120px;
+    padding-bottom: 72px;
+}
+
+.team-list {
+    display: flex;
+    padding-bottom: 120px;
+    gap: 24px;
 }
 
 .team-item {
     background-color: var(--background-color);
+    width: calc((100% - 72px) / 4);
+}
+
+.team-content {
+    padding: 32px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
 }
 
 .team-subtitle {
@@ -169,6 +292,11 @@ body {
     background-color: var(--primary-black-color);
 }
 
+.footer-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -177,6 +305,8 @@ body {
     letter-spacing: 0.03em;
     color: var(--primary-logo-color);
     text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-logo-span {
@@ -188,10 +318,22 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-white-color);
-    
+    max-width: 264px;
 }
 
 /* ----------------portfolio---------------- */
+
+.portfolio-container {
+    margin-top: 96px;
+    margin-bottom: 72px;
+}
+
+.button-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 24px;
+}
 
 .filter-button {
     font-family: 'Roboto', sans-serif;
@@ -202,16 +344,34 @@ body {
     cursor: pointer;
     color: var(--primary-logo-color);
     background-color: var(--primary-white-color);
-    border: 1px solid #E7E9FC;
+    border: 1px solid var(--border-accent);
+    padding: 12px 24px;
 }
 
 .filter-button:hover,
 .filter-button:focus {
-    color: #FFFFFF;
+    color: var(--background-color);
     background-color: #404BBF;
 }
 
 /* ----------------projects---------------- */
+
+.projects-container {
+    margin-bottom: 120px;
+}
+
+.projects-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+}
+
+.projects-content {
+    padding: 32px 0 32px 16px;
+    border-right: 1px solid var(--border-accent);
+    border-left: 1px solid var(--border-accent);
+    border-bottom: 1px solid var(--border-accent);
+}
 
 .projects-subtitle {
     font-weight: 500;
@@ -219,6 +379,7 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-black-color);
+    padding-bottom: 8px;
 }
 
 .projects-text {
