--- a/css/styles.css
+++ b/css/styles.css
@@ -76,8 +76,7 @@ img {
 .header-nav {
     display: flex;
     align-items: center;
-    flex-grow: 1;
-    justify-content: space-between;
+    margin-right: 332px;
 }
 
 .header-logo {
@@ -99,7 +98,6 @@ img {
 
 .header-menu {
     display: flex;
-    margin-right: 332px;
     gap: 40px;
 }
 
@@ -153,7 +151,7 @@ img {
     max-width: 496px;
     margin: 0 auto;
     text-align: center;
-    padding-bottom: 48px;
+    margin-bottom: 48px;
 }
 
 .hero-button {
